[package]
name = "phase2"
version = "0.3.0"
authors = ["Sean Bowe <ewillbefull@gmail.com>", "Matthias Schönebeck <matthias.schoenebeck@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase2"
homepage = "https://github.com/mschoenebeck/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/mschoenebeck/phase2"

[dependencies]
pairing = "0.23"
bls12_381 = "0.8"
group = { version = "0.13", features = ["wnaf-memuse"] }
rand = "0.8"
rand_core = "0.6"
bellman = "0.14.0"
byteorder = "1"
num_cpus = "1"
crossbeam = "0.3"
blake2-rfc = "0.2"
